--- a/src/css/style.css
+++ b/src/css/style.css
@@ -5,4 +5,7 @@ body{
 
 #board{
     background-image: url('../../assets/img/flappybirdbg.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
 }
