--- a/src/css/style.css
+++ b/src/css/style.css
@@ -9,3 +9,13 @@ body{
     background-size: cover;
     background-position: center;
 }
+
+#playBtn{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 15px 30px;
+    font-size: 24px;
+    cursor: pointer;
+}
